fix button causing page overlap

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -76,6 +76,7 @@ p {
 
 .btn {
   font-family: 'Rye', cursive;
+  white-space: break-spaces;
 }
 
 .markdown-content {
